fix(searching): remove empty cell

--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -15,7 +15,7 @@
     "* Best-case performance: O(1)\n",
     "* Average performance: O(log n)\n",
     "* Worst-case space complexity: O(1)\n",
-    "* Psuedo Code: [Wikiwand\"](https://www.wikiwand.com/en/Binary_search_algorithm)"
+    "* Psuedo Code: [Wikiwand](https://www.wikiwand.com/en/Binary_search_algorithm)"
    ]
   },
   {
@@ -71,15 +71,6 @@
     "    assert rv4 == False\n",
     "    assert rv5 == 4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
