fix(sorting): incorrect image file path

--- a/sorting/bubble_sort.ipynb
+++ b/sorting/bubble_sort.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "A naive sorting that compares and swaps adjacent elements.\n",
     "\n",
-    "![Bubble_sort](bubble_search.gif)\n",
+    "![Bubble_sort](./bubble_search.gif)\n",
     "\n",
     "* Data structure: Array\n",
     "* Worst-case performance: O(n^{2})\n",
