fix(latex): latex format in markdown cell

--- a/sorting/bubble_sort.ipynb
+++ b/sorting/bubble_sort.ipynb
@@ -8,19 +8,19 @@
     "\n",
     "A naive sorting that compares and swaps adjacent elements.\n",
     "\n",
-    "![Bubble_sort](./bubble_search.gif)\n",
+    "![Bubble_sort](bubble_sort.gif)\n",
     "\n",
     "* Data structure: Array\n",
-    "* Worst-case performance: O(n^{2})\n",
-    "* Best-case performance: O(n)\n",
-    "* Average performance: O(n^{2})\n",
-    "* Worst-case space complexity: O(1) auxiliary\n",
+    "* Worst-case performance: $O(n^{2})$\n",
+    "* Best-case performance: $O(n)$\n",
+    "* Average performance: $O(n^{2})$\n",
+    "* Worst-case space complexity: $O(1)$ auxiliary\n",
     "* Psuedo code: [Wikiwand](https://www.wikiwand.com/en/Bubble_sort)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
