--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -11,10 +11,10 @@
     "![Binary_search_algorithm](https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Binary_Search_Depiction.svg/640px-Binary_Search_Depiction.svg.png?1505047966869)\n",
     "\n",
     "* Data structure: Array\n",
-    "* Worst-case performance: O(log n)\n",
-    "* Best-case performance: O(1)\n",
-    "* Average performance: O(log n)\n",
-    "* Worst-case space complexity: O(1)\n",
+    "* Worst-case performance: $O(log n)$\n",
+    "* Best-case performance: $O(1)$\n",
+    "* Average performance: $O(log n)$\n",
+    "* Worst-case space complexity: $O(1)$\n",
     "* Psuedo Code: [Wikiwand](https://www.wikiwand.com/en/Binary_search_algorithm)"
    ]
   },
