fix(searching): ues unittes libary for unit test

--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Recursively partitions the list until the `key` is found.\n",
     "\n",
-    "![Binary_search_algorithm](https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Binary_Search_Depiction.svg/640px-Binary_Search_Depiction.svg.png?1505047966869)\n",
+    "![Binary_search_algorithm](binary_search.png)\n",
     "\n",
     "* Data structure: Array\n",
     "* Worst-case performance: $O(log n)$\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -52,24 +52,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def test_search():\n",
-    "    seq = range(10)\n",
-    "    rv1 = search(seq, 0)\n",
-    "    rv2 = search(seq, 9)\n",
-    "    rv3 = search(seq, -1)\n",
-    "    rv4 = search(seq, 10)\n",
-    "    rv5 = search(seq, 4)\n",
-    "    assert rv1 == 0\n",
-    "    assert rv2 == 9\n",
-    "    assert rv3 == False\n",
-    "    assert rv4 == False\n",
-    "    assert rv5 == 4"
+    "import unittest\n",
+    "\n",
+    "class TestBinarySearch(unittest.TestCase):\n",
+    "    \"\"\"\n",
+    "    Tests Binary Search on a small range from 0-9\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def test_binarysearch(self):\n",
+    "        self.seq = range(10)\n",
+    "        rv1 = search(self.seq, 0)\n",
+    "        rv2 = search(self.seq, 9)\n",
+    "        rv3 = search(self.seq, -1)\n",
+    "        rv4 = search(self.seq, 10)\n",
+    "        rv5 = search(self.seq, 4)\n",
+    "        self.assertIs(rv1, 0)\n",
+    "        self.assertIs(rv2, 9)\n",
+    "        self.assertFalse(rv3)\n",
+    "        self.assertFalse(rv4)\n",
+    "        self.assertIs(rv5, 4)\n",
+    "        self.seq = range(9)\n",
+    "        rv1 = search(self.seq, 0)\n",
+    "        rv2 = search(self.seq, 8)\n",
+    "        rv3 = search(self.seq, -1)\n",
+    "        rv4 = search(self.seq, 10)\n",
+    "        rv5 = search(self.seq, 4)\n",
+    "        self.assertIs(rv1, 0)\n",
+    "        self.assertIs(rv2, 8)\n",
+    "        self.assertFalse(rv3)\n",
+    "        self.assertFalse(rv4)\n",
+    "        self.assertIs(rv5, 4)\n",
+    "        \n",
+    "suite = unittest.TestSuite()\n",
+    "suite.addTests(unittest.TestLoader().loadTestsFromTestCase(TestBinarySearch))\n",
+    "unittest.TextTestRunner(verbosity=2).run(suite)"
    ]
   }
  ],
