test(sorting): add unit test of bubble sort

--- a/sorting/bubble_sort.ipynb
+++ b/sorting/bubble_sort.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -39,6 +39,35 @@
     "            if seq[n] < seq[n - 1]:\n",
     "                seq[n - 1], seq[n] = seq[n], seq[n - 1]\n",
     "    return seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import unittest\n",
+    "\n",
+    "class TestBubbleSort(unittest.TestCase):\n",
+    "    \"\"\"\n",
+    "    Tests Bubble sort on a small range from 0-9\n",
+    "    \"\"\"\n",
+    "    def setUp(self):\n",
+    "        self.input = list(range(10))\n",
+    "        random.shuffle(self.input)\n",
+    "        self.correct = list(range(10))\n",
+    "\n",
+    "    def test_bubblesort(self):\n",
+    "        self.output = sort(self.input)\n",
+    "        self.assertEqual(self.correct, self.output)\n",
+    "        \n",
+    "suite = unittest.TestSuite()\n",
+    "suite.addTests(unittest.TestLoader().loadTestsFromTestCase(TestBubbleSort))\n",
+    "unittest.TextTestRunner(verbosity=2).run(suite)"
    ]
   }
  ],
