--- a/sorting/selection_sort.ipynb
+++ b/sorting/selection_sort.ipynb
@@ -4,23 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quick Sort\n",
+    "# Selection Sort\n",
     "\n",
-    "Uses partitioning to recursively divide and sort the list\n",
+    "A sorting that uses in-place comparison.\n",
     "\n",
-    "![quick_sort](quick_sort.gif)\n",
+    "![selection_sort](selection_sort.gif)\n",
     "\n",
     "* Data structure: Array\n",
     "* Worst-case performance: $O(n^2)$\n",
-    "* Best-case performance:\n",
-    "    * $O(n log n)$ (simple partition)\n",
-    "    * $O(n)$ (three-way partition and equal keys)\n",
-    "* Average performance: $O(n log n)$\n",
+    "* Best-case performance: $O(n^2)$\n",
+    "* Average performance: $O(n^2)$\n",
     "* Worst-case space complexity\n",
-    "    * $O(n)$ auxiliary (naive)\n",
-    "    * $O(log n)$ auxiliary (Sedgewick 1978)\n",
+    "    * $O(n)$ total\n",
+    "    * $O(1)$ auxiliary\n",
     "\n",
-    "* Psuedo code: [Wikiwand](https://www.wikiwand.com/en/Quicksort)"
+    "* Psuedo code: [Wikiwand](https://www.wikiwand.com/en/Selection_sort)"
    ]
   },
   {
@@ -38,17 +36,15 @@
     "    :param seq: A list of integers\n",
     "    :rtype: A list of sorted integers\n",
     "    \"\"\"\n",
-    "    if len(seq) <= 1:\n",
-    "        return seq\n",
-    "    else:\n",
-    "        pivot = seq[0]\n",
-    "        left, right = [], []\n",
-    "        for x in seq[1:]:\n",
-    "            if x < pivot:\n",
-    "                left.append(x)\n",
-    "            else:\n",
-    "                right.append(x)\n",
-    "        return sort(left) + [pivot] + sort(right)"
+    "    for i in range(0, len(seq)):\n",
+    "        iMin = i\n",
+    "        for j in range(i+1, len(seq)):\n",
+    "            if seq[iMin] > seq[j]:\n",
+    "                iMin = j\n",
+    "        if i != iMin:\n",
+    "            seq[i], seq[iMin] = seq[iMin], seq[i]\n",
+    "\n",
+    "    return seq"
    ]
   },
   {
@@ -62,21 +58,21 @@
     "import random\n",
     "import unittest\n",
     "\n",
-    "class TestQuickSort(unittest.TestCase):\n",
+    "class TestSelectionort(unittest.TestCase):\n",
     "    \"\"\"\n",
-    "    Test Quick sort on a small range from 0-9\n",
+    "    Test Selection sort on a small range from 0-9\n",
     "    \"\"\"\n",
     "    def setUp(self):\n",
     "        self.input = list(range(10))\n",
     "        random.shuffle(self.input)\n",
     "        self.correct = list(range(10))\n",
     "\n",
-    "    def test_quicksort(self):\n",
+    "    def test_selectionsort(self):\n",
     "        self.output = sort(self.input)\n",
     "        self.assertEqual(self.correct, self.output)\n",
     "        \n",
     "suite = unittest.TestSuite()\n",
-    "suite.addTests(unittest.TestLoader().loadTestsFromTestCase(TestQuickSort))\n",
+    "suite.addTests(unittest.TestLoader().loadTestsFromTestCase(TestSelectionort))\n",
     "unittest.TextTestRunner(verbosity=2).run(suite)"
    ]
   }
